--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "tushare (>=1.4.24,<2.0.0)",
     "akshare (>=1.18.30,<2.0.0)",
     "zmq (>=0.0.0,<0.0.1)",
+    "vectorbt @ git+ssh://git@github.com/felinx99/vectorbt.git",
 ]
 package-mode = false
 
